Update renovate config and remove dependabot

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
   "extends": [
-    "config:base"
-  ]
+    "config:base",
+    "schedule:weekly"
+  ],
+  "labels": ["dependencies"],
+  "minor": { "automerge": true },
+  "patch": { "automerge": true }
 }
