--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   ],
   "labels": ["dependencies"],
   "minor": { "automerge": true },
-  "patch": { "automerge": true }
+  "patch": { "automerge": true },
   "assignees": ["@eana"],
   "reviewers": ["@eana"]
 }
