--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,13 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base",
-    "schedule:weekly"
+    ":dependencyDashboard"
   ],
   "labels": ["dependencies"],
   "minor": { "automerge": true },
   "patch": { "automerge": true },
+  "schedule": ["after 10am and before 3pm on every weekday"],
   "assignees": ["@eana"],
   "reviewers": ["@eana"]
 }
