--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,18 +21,18 @@ jobs:
 
 workflows:
   version: 2
-  test_build:
+  build_and_push:
     jobs:
       - docker_test_build:
           context:
             - docker-publish
             - aws_svc_circleci
-  build_and_push:
-    jobs:
       - docker_build_and_push:
           context:
             - docker-publish
             - aws_svc_circleci
+          requires:
+            - docker_test_build
           filters:
             branches:
               only: master
